Shang New Live/src/objects/Electric_Meter__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filename_Format__c</fullName>
        <label>Filename Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horse_Power__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Horse Power</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Loss__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Loss</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Maintenance Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mall_Code__c</fullName>
        <formula>Unit__r.Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mall Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_No__c</fullName>
        <label>Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Meter_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power Factor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Unit__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipName>Electric_Meter_No</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Electric Meter</label>
    <nameField>
        <displayFormat>{yyyy}-{mm}-EM-{00000000}</displayFormat>
        <label>Electric Meter Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electric Meter</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>